# parallel-multilang-texts

./: pyproject.toml  routes.py
templates/: input.html  output.html  test.html
